// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`button > render as an anchor with href prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <a
      aria-disabled="false"
      class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_primary__1x0t66m9 styles_size_large__1x0t66me styles_variant_filled__1x0t66mi styles_undefined_compound_0__1x0t66ml"
      href="http://scaleway.com"
      type="button"
    >
      Scaleway
    </a>
  </div>
</DocumentFragment>
`;

exports[`button > render large 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_primary__1x0t66m9 styles_size_large__1x0t66me styles_variant_filled__1x0t66mi styles_undefined_compound_0__1x0t66ml"
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > render medium 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_primary__1x0t66m9 styles_size_medium__1x0t66mf styles_variant_filled__1x0t66mi styles_undefined_compound_0__1x0t66ml"
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > render prop > element form > render correctly with render prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <a
      class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_primary__1x0t66m9 styles_size_large__1x0t66me styles_variant_filled__1x0t66mi styles_undefined_compound_0__1x0t66ml"
      href="/about"
    >
      About
    </a>
  </div>
</DocumentFragment>
`;

exports[`button > render prop > element form > render correctly with render prop and different sentiments 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <a
      class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_primary__1x0t66m9 styles_size_large__1x0t66me styles_variant_filled__1x0t66mi styles_undefined_compound_0__1x0t66ml"
      href="/about"
    >
      Primary
    </a>
    <a
      class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_danger__1x0t66m6 styles_size_large__1x0t66me styles_variant_filled__1x0t66mi styles_undefined_compound_2__1x0t66mn"
      href="/about"
    >
      Danger
    </a>
    <a
      class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_neutral__1x0t66m8 styles_size_large__1x0t66me styles_variant_filled__1x0t66mi styles_undefined_compound_6__1x0t66mr"
      href="/about"
    >
      Neutral
    </a>
  </div>
</DocumentFragment>
`;

exports[`button > render prop > element form > render correctly with render prop and different variants 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <a
      class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_primary__1x0t66m9 styles_size_large__1x0t66me styles_variant_filled__1x0t66mi styles_undefined_compound_0__1x0t66ml"
      href="/about"
    >
      Filled
    </a>
    <a
      class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_primary__1x0t66m9 styles_size_large__1x0t66me styles_variant_outlined__1x0t66mk styles_undefined_compound_9__1x0t66mu"
      href="/about"
    >
      Outlined
    </a>
    <a
      class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_primary__1x0t66m9 styles_size_large__1x0t66me styles_variant_ghost__1x0t66mj styles_undefined_compound_18__1x0t66m13"
      href="/about"
    >
      Ghost
    </a>
  </div>
</DocumentFragment>
`;

exports[`button > render prop > element form > render correctly with render prop and fullWidth 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <a
      class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_true__1x0t66m4 styles_sentiment_primary__1x0t66m9 styles_size_large__1x0t66me styles_variant_filled__1x0t66mi styles_undefined_compound_0__1x0t66ml"
      href="/about"
    >
      About
    </a>
  </div>
</DocumentFragment>
`;

exports[`button > render prop > element form > render correctly with render prop and sizes 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <a
      class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_primary__1x0t66m9 styles_size_large__1x0t66me styles_variant_filled__1x0t66mi styles_undefined_compound_0__1x0t66ml"
      href="/about"
    >
      Large
    </a>
    <a
      class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_primary__1x0t66m9 styles_size_medium__1x0t66mf styles_variant_filled__1x0t66mi styles_undefined_compound_0__1x0t66ml"
      href="/about"
    >
      Medium
    </a>
    <a
      class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_primary__1x0t66m9 styles_size_small__1x0t66mg styles_variant_filled__1x0t66mi styles_undefined_compound_0__1x0t66ml"
      href="/about"
    >
      Small
    </a>
  </div>
</DocumentFragment>
`;

exports[`button > render prop > function form > render correctly with render function 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <a
      class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_primary__1x0t66m9 styles_size_large__1x0t66me styles_variant_filled__1x0t66mi styles_undefined_compound_0__1x0t66ml"
      href="/about"
    >
      About
    </a>
  </div>
</DocumentFragment>
`;

exports[`button > render small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_primary__1x0t66m9 styles_size_small__1x0t66mg styles_variant_filled__1x0t66mi styles_undefined_compound_0__1x0t66ml"
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > render with a tooltip 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1u0cyic5"
    >
      <button
        class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_primary__1x0t66m9 styles_size_large__1x0t66me styles_variant_filled__1x0t66mi styles_undefined_compound_0__1x0t66ml"
        type="button"
      >
        Hello
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`button > render with fullWidth 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_true__1x0t66m4 styles_sentiment_primary__1x0t66m9 styles_size_large__1x0t66me styles_variant_filled__1x0t66mi styles_undefined_compound_0__1x0t66ml"
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > render with icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_true__1x0t66m2 styles_fullWidth_false__1x0t66m3 styles_sentiment_primary__1x0t66m9 styles_size_large__1x0t66me styles_variant_filled__1x0t66mi styles_undefined_compound_0__1x0t66ml"
      disabled=""
      type="button"
    >
      <svg
        class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
        height="16"
        viewBox="0 0 16 16"
        width="16"
      >
        <title>
          PencilIcon
        </title>
        <path
          d="M14.402 1.598a2.04 2.04 0 0 0-2.887 0L6.543 6.57a3.2 3.2 0 0 0-.696 1.04l-.989 2.388a.875.875 0 0 0 1.144 1.144l2.387-.99a3.2 3.2 0 0 0 1.041-.695l4.972-4.972a2.04 2.04 0 0 0 0-2.887"
        />
        <path
          d="M4.208 2.75c-.805 0-1.458.653-1.458 1.458v7.584c0 .805.653 1.458 1.458 1.458h7.584c.805 0 1.458-.653 1.458-1.458V9.167a.875.875 0 1 1 1.75 0v2.625A3.21 3.21 0 0 1 11.792 15H4.208A3.21 3.21 0 0 1 1 11.792V4.208A3.21 3.21 0 0 1 4.208 1h2.625a.875.875 0 1 1 0 1.75z"
        />
      </svg>
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > render with icon on the right 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_true__1x0t66m2 styles_fullWidth_false__1x0t66m3 styles_sentiment_primary__1x0t66m9 styles_size_large__1x0t66me styles_variant_filled__1x0t66mi styles_undefined_compound_0__1x0t66ml"
      disabled=""
      type="button"
    >
      Hello
      <svg
        class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
        height="16"
        viewBox="0 0 16 16"
        width="16"
      >
        <title>
          PencilIcon
        </title>
        <path
          d="M14.402 1.598a2.04 2.04 0 0 0-2.887 0L6.543 6.57a3.2 3.2 0 0 0-.696 1.04l-.989 2.388a.875.875 0 0 0 1.144 1.144l2.387-.99a3.2 3.2 0 0 0 1.041-.695l4.972-4.972a2.04 2.04 0 0 0 0-2.887"
        />
        <path
          d="M4.208 2.75c-.805 0-1.458.653-1.458 1.458v7.584c0 .805.653 1.458 1.458 1.458h7.584c.805 0 1.458-.653 1.458-1.458V9.167a.875.875 0 1 1 1.75 0v2.625A3.21 3.21 0 0 1 11.792 15H4.208A3.21 3.21 0 0 1 1 11.792V4.208A3.21 3.21 0 0 1 4.208 1h2.625a.875.875 0 1 1 0 1.75z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > render with icon only 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_true__1x0t66m2 styles_fullWidth_false__1x0t66m3 styles_sentiment_primary__1x0t66m9 styles_size_large__1x0t66me styles_variant_filled__1x0t66mi styles_undefined_compound_0__1x0t66ml"
      disabled=""
      type="button"
    >
      <svg
        class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
        height="16"
        viewBox="0 0 16 16"
        width="16"
      >
        <title>
          PencilOutlineIcon
        </title>
        <path
          clip-rule="evenodd"
          d="M13.508 2.492a.61.61 0 0 0-.866 0l-.678.678.866.866.678-.678a.61.61 0 0 0 0-.866m-1.606 2.472-.866-.866-5.58 5.58c-.28.28-.486.626-.6 1.006l-.194.655.654-.195c.38-.114.726-.32 1.007-.6zm-.188-3.4a1.925 1.925 0 0 1 2.722 2.722l-7.185 7.186a3.7 3.7 0 0 1-1.56.93l-1.817.54a.656.656 0 0 1-.817-.816L3.6 10.31c.175-.59.495-1.126.93-1.56l6.043-6.044.464.464-.464-.464zM3.179 4.85a.866.866 0 0 0-.866.866v7.105c0 .479.387.867.866.867h7.105a.866.866 0 0 0 .866-.867V9.607a.656.656 0 1 1 1.313 0v3.214A2.18 2.18 0 0 1 10.283 15H3.18A2.18 2.18 0 0 1 1 12.821V5.716c0-1.203.975-2.179 2.179-2.179h3.214a.656.656 0 0 1 0 1.313z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > render with isLoading with icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_primary__1x0t66m9 styles_size_large__1x0t66me styles_variant_filled__1x0t66mi styles_undefined_compound_0__1x0t66ml"
      disabled=""
      type="button"
    >
      <svg
        aria-label="Loading"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="styles__f8iw982"
        role="progressbar"
        style="height: 1rem; width: 1rem;"
        viewBox="0 0 100 100"
      >
        <circle
          class="styles__f8iw981"
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke-width="16"
        />
        <circle
          class="styles__f8iw983"
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="#ffffff"
          stroke-dasharray="263.89378290154264"
          stroke-dashoffset="211.11502632123413"
          stroke-linecap="round"
          stroke-width="16"
        />
      </svg>
      <svg
        class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
        height="16"
        viewBox="0 0 16 16"
        width="16"
      >
        <title>
          PencilIcon
        </title>
        <path
          d="M14.402 1.598a2.04 2.04 0 0 0-2.887 0L6.543 6.57a3.2 3.2 0 0 0-.696 1.04l-.989 2.388a.875.875 0 0 0 1.144 1.144l2.387-.99a3.2 3.2 0 0 0 1.041-.695l4.972-4.972a2.04 2.04 0 0 0 0-2.887"
        />
        <path
          d="M4.208 2.75c-.805 0-1.458.653-1.458 1.458v7.584c0 .805.653 1.458 1.458 1.458h7.584c.805 0 1.458-.653 1.458-1.458V9.167a.875.875 0 1 1 1.75 0v2.625A3.21 3.21 0 0 1 11.792 15H4.208A3.21 3.21 0 0 1 1 11.792V4.208A3.21 3.21 0 0 1 4.208 1h2.625a.875.875 0 1 1 0 1.75z"
        />
      </svg>
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > render with isLoading with icon variant 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_primary__1x0t66m9 styles_size_large__1x0t66me styles_variant_filled__1x0t66mi styles_undefined_compound_0__1x0t66ml"
      type="button"
    >
      <svg
        class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
        height="16"
        viewBox="0 0 16 16"
        width="16"
      >
        <title>
          PencilOutlineIcon
        </title>
        <path
          clip-rule="evenodd"
          d="M13.508 2.492a.61.61 0 0 0-.866 0l-.678.678.866.866.678-.678a.61.61 0 0 0 0-.866m-1.606 2.472-.866-.866-5.58 5.58c-.28.28-.486.626-.6 1.006l-.194.655.654-.195c.38-.114.726-.32 1.007-.6zm-.188-3.4a1.925 1.925 0 0 1 2.722 2.722l-7.185 7.186a3.7 3.7 0 0 1-1.56.93l-1.817.54a.656.656 0 0 1-.817-.816L3.6 10.31c.175-.59.495-1.126.93-1.56l6.043-6.044.464.464-.464-.464zM3.179 4.85a.866.866 0 0 0-.866.866v7.105c0 .479.387.867.866.867h7.105a.866.866 0 0 0 .866-.867V9.607a.656.656 0 1 1 1.313 0v3.214A2.18 2.18 0 0 1 10.283 15H3.18A2.18 2.18 0 0 1 1 12.821V5.716c0-1.203.975-2.179 2.179-2.179h3.214a.656.656 0 0 1 0 1.313z"
          fill-rule="evenodd"
        />
      </svg>
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > render with isLoading without icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_primary__1x0t66m9 styles_size_large__1x0t66me styles_variant_filled__1x0t66mi styles_undefined_compound_0__1x0t66ml"
      disabled=""
      type="button"
    >
      <svg
        aria-label="Loading"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="styles__f8iw982"
        role="progressbar"
        style="height: 1rem; width: 1rem;"
        viewBox="0 0 100 100"
      >
        <circle
          class="styles__f8iw981"
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke-width="16"
        />
        <circle
          class="styles__f8iw983"
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="#ffffff"
          stroke-dasharray="263.89378290154264"
          stroke-dashoffset="211.11502632123413"
          stroke-linecap="round"
          stroke-width="16"
        />
      </svg>
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > render xsmall 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_false__1x0t66m1 styles_fullWidth_false__1x0t66m3 styles_sentiment_primary__1x0t66m9 styles_size_xsmall__1x0t66mh styles_variant_filled__1x0t66mi styles_undefined_compound_0__1x0t66ml"
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render filled&black 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render filled&black disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_true__1x0t66m2 styles_fullWidth_false__1x0t66m3 styles_sentiment_black__1x0t66m5 styles_size_large__1x0t66me styles_variant_filled__1x0t66mi styles_undefined_compound_7__1x0t66ms"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render filled&danger 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render filled&danger disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_true__1x0t66m2 styles_fullWidth_false__1x0t66m3 styles_sentiment_danger__1x0t66m6 styles_size_large__1x0t66me styles_variant_filled__1x0t66mi styles_undefined_compound_2__1x0t66mn"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render filled&info 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render filled&info disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_true__1x0t66m2 styles_fullWidth_false__1x0t66m3 styles_sentiment_info__1x0t66m7 styles_size_large__1x0t66me styles_variant_filled__1x0t66mi styles_undefined_compound_3__1x0t66mo"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render filled&neutral 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render filled&neutral disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_true__1x0t66m2 styles_fullWidth_false__1x0t66m3 styles_sentiment_neutral__1x0t66m8 styles_size_large__1x0t66me styles_variant_filled__1x0t66mi styles_undefined_compound_6__1x0t66mr"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render filled&primary 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render filled&primary disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_true__1x0t66m2 styles_fullWidth_false__1x0t66m3 styles_sentiment_primary__1x0t66m9 styles_size_large__1x0t66me styles_variant_filled__1x0t66mi styles_undefined_compound_0__1x0t66ml"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render filled&secondary 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render filled&secondary disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_true__1x0t66m2 styles_fullWidth_false__1x0t66m3 styles_sentiment_secondary__1x0t66ma styles_size_large__1x0t66me styles_variant_filled__1x0t66mi styles_undefined_compound_1__1x0t66mm"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render filled&success 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render filled&success disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_true__1x0t66m2 styles_fullWidth_false__1x0t66m3 styles_sentiment_success__1x0t66mb styles_size_large__1x0t66me styles_variant_filled__1x0t66mi styles_undefined_compound_4__1x0t66mp"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render filled&warning 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render filled&warning disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_true__1x0t66m2 styles_fullWidth_false__1x0t66m3 styles_sentiment_warning__1x0t66mc styles_size_large__1x0t66me styles_variant_filled__1x0t66mi styles_undefined_compound_5__1x0t66mq"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render filled&white 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render filled&white disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_true__1x0t66m2 styles_fullWidth_false__1x0t66m3 styles_sentiment_white__1x0t66md styles_size_large__1x0t66me styles_variant_filled__1x0t66mi styles_undefined_compound_8__1x0t66mt"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render ghost&black 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render ghost&black disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_true__1x0t66m2 styles_fullWidth_false__1x0t66m3 styles_sentiment_black__1x0t66m5 styles_size_large__1x0t66me styles_variant_ghost__1x0t66mj styles_undefined_compound_25__1x0t66m1a"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render ghost&danger 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render ghost&danger disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_true__1x0t66m2 styles_fullWidth_false__1x0t66m3 styles_sentiment_danger__1x0t66m6 styles_size_large__1x0t66me styles_variant_ghost__1x0t66mj styles_undefined_compound_20__1x0t66m15"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render ghost&info 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render ghost&info disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_true__1x0t66m2 styles_fullWidth_false__1x0t66m3 styles_sentiment_info__1x0t66m7 styles_size_large__1x0t66me styles_variant_ghost__1x0t66mj styles_undefined_compound_21__1x0t66m16"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render ghost&neutral 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render ghost&neutral disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_true__1x0t66m2 styles_fullWidth_false__1x0t66m3 styles_sentiment_neutral__1x0t66m8 styles_size_large__1x0t66me styles_variant_ghost__1x0t66mj styles_undefined_compound_24__1x0t66m19"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render ghost&primary 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render ghost&primary disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_true__1x0t66m2 styles_fullWidth_false__1x0t66m3 styles_sentiment_primary__1x0t66m9 styles_size_large__1x0t66me styles_variant_ghost__1x0t66mj styles_undefined_compound_18__1x0t66m13"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render ghost&secondary 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render ghost&secondary disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_true__1x0t66m2 styles_fullWidth_false__1x0t66m3 styles_sentiment_secondary__1x0t66ma styles_size_large__1x0t66me styles_variant_ghost__1x0t66mj styles_undefined_compound_19__1x0t66m14"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render ghost&success 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render ghost&success disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_true__1x0t66m2 styles_fullWidth_false__1x0t66m3 styles_sentiment_success__1x0t66mb styles_size_large__1x0t66me styles_variant_ghost__1x0t66mj styles_undefined_compound_22__1x0t66m17"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render ghost&warning 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render ghost&warning disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_true__1x0t66m2 styles_fullWidth_false__1x0t66m3 styles_sentiment_warning__1x0t66mc styles_size_large__1x0t66me styles_variant_ghost__1x0t66mj styles_undefined_compound_23__1x0t66m18"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render ghost&white 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render ghost&white disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_true__1x0t66m2 styles_fullWidth_false__1x0t66m3 styles_sentiment_white__1x0t66md styles_size_large__1x0t66me styles_variant_ghost__1x0t66mj styles_undefined_compound_26__1x0t66m1b"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render outlined&black 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render outlined&black disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_true__1x0t66m2 styles_fullWidth_false__1x0t66m3 styles_sentiment_black__1x0t66m5 styles_size_large__1x0t66me styles_variant_outlined__1x0t66mk styles_undefined_compound_16__1x0t66m11"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render outlined&danger 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render outlined&danger disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_true__1x0t66m2 styles_fullWidth_false__1x0t66m3 styles_sentiment_danger__1x0t66m6 styles_size_large__1x0t66me styles_variant_outlined__1x0t66mk styles_undefined_compound_11__1x0t66mw"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render outlined&info 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render outlined&info disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_true__1x0t66m2 styles_fullWidth_false__1x0t66m3 styles_sentiment_info__1x0t66m7 styles_size_large__1x0t66me styles_variant_outlined__1x0t66mk styles_undefined_compound_12__1x0t66mx"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render outlined&neutral 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render outlined&neutral disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_true__1x0t66m2 styles_fullWidth_false__1x0t66m3 styles_sentiment_neutral__1x0t66m8 styles_size_large__1x0t66me styles_variant_outlined__1x0t66mk styles_undefined_compound_15__1x0t66m10"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render outlined&primary 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render outlined&primary disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_true__1x0t66m2 styles_fullWidth_false__1x0t66m3 styles_sentiment_primary__1x0t66m9 styles_size_large__1x0t66me styles_variant_outlined__1x0t66mk styles_undefined_compound_9__1x0t66mu"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render outlined&secondary 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render outlined&secondary disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_true__1x0t66m2 styles_fullWidth_false__1x0t66m3 styles_sentiment_secondary__1x0t66ma styles_size_large__1x0t66me styles_variant_outlined__1x0t66mk styles_undefined_compound_10__1x0t66mv"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render outlined&success 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render outlined&success disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_true__1x0t66m2 styles_fullWidth_false__1x0t66m3 styles_sentiment_success__1x0t66mb styles_size_large__1x0t66me styles_variant_outlined__1x0t66mk styles_undefined_compound_13__1x0t66my"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render outlined&warning 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render outlined&warning disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_true__1x0t66m2 styles_fullWidth_false__1x0t66m3 styles_sentiment_warning__1x0t66mc styles_size_large__1x0t66me styles_variant_outlined__1x0t66mk styles_undefined_compound_14__1x0t66mz"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > variant-sentiment-disabled combination > render outlined&white 1`] = `[Function]`;

exports[`button > variant-sentiment-disabled combination > render outlined&white disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__1x0t66m0 styles_disabled_true__1x0t66m2 styles_fullWidth_false__1x0t66m3 styles_sentiment_white__1x0t66md styles_size_large__1x0t66me styles_variant_outlined__1x0t66mk styles_undefined_compound_17__1x0t66m12"
      disabled=""
      type="button"
    >
      Hello
    </button>
  </div>
</DocumentFragment>
`;

exports[`button > work with onPointerDown and onKeyDown 1`] = `[Function]`;
